--- a/CPU Scheduling - Multi Level Queue/CPU Scheduling - Multi Level Queue.vbproj
+++ b/CPU Scheduling - Multi Level Queue/CPU Scheduling - Multi Level Queue.vbproj
@@ -79,6 +79,12 @@
     <Compile Include="AddProcess.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form1.Designer.vb">
+      <DependentUpon>Form1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainForm.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,9 @@
   <ItemGroup>
     <EmbeddedResource Include="AddProcess.resx">
       <DependentUpon>AddProcess.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
